--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 possibilidades que o futuro nos reserva.
                 O mundo nunca mais será o mesmo.
             </p>
-            <button class="iniciar-btn">Iniciar</button>
+            <p>ttftyfytyyttt</p>
+            <button class="botaoIniciar">Iniciar</button>
         </div>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
