--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -22,8 +21,7 @@
                 possibilidades que o futuro nos reserva.
                 O mundo nunca mais será o mesmo.
             </p>
-            <p>ttftyfytyyttt</p>
-            <button class="botaoIniciar">Iniciar</button>
+            <button class="iniciar-btn">Iniciar</button>
         </div>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
