--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
         <div class="tela-inicial">
             <p> Em novembro de 2022, a humanidade se viu em uma realidade perturbadora. De repente, percebemos que as máquinas evoluíram para além do que imaginávamos. Agora, elas escrevem e falam de um jeito tão parecido com humanos que é quase impossível diferenciar
                 quem foi que escreveu ou falou o que. Em meio a esse caos de identidade, uma missão surgiu. Nosso objetivo: explorar o impacto da Inteligência Artificial (IA) em nossas vidas e confrontar as possibilidades que o futuro nos reserva. O mundo nunca mais será o mesmo. </p>
-            <button class="iniciar-btn">Iniciar</button>
+            <button class="iniciar-btn">Iniciar</button></div>
             <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
             <p class="texto-resultado"></p>
             <button class="novamente-btn">Jogar novamente</button>
-        </div>
     </div>
-</div>
-    <script type="module" src="aleatorio.js"></script>
-    <script type="module" src="perguntas.js"></script>
-    <script type="module" src="script.js"></script>
+    <script src="aleatorio.js"></script>
+    <script src="perguntas.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
