--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </div>
     </div>
     </div>
-    
-    <script src="aleatorio.js"></script>
-    <script src="perguntas.js"></script>
-    <script src="script.js"></script>
+
+    <script type="module" src="aleatorio.js"></script>
+    <script type="module" src="perguntas.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
